# openhands-aci

./: .gitignore  README.md  pyproject.toml  rag_integration_example.py
.code_search_index/: documents.pkl  index.faiss
.github/workflows/: py-intg-tests.yml  py-unit-tests.yml
dev_config/python/: .pre-commit-config.yaml
docs/: enhanced_rag_integration_guide.md  rag_integration_guide.md
examples/: agent_with_rag.py  autonomous_rag_agent.py  code_search_example.py  enhanced_workflow_example.py  llm_rag_agent_example.py
openhands_aci/: __init__.py  config.py  events.py  visualization.py  workflow.py
openhands_aci/agent/: __init__.py  llm_rag_agent.py  rag_agent.py
openhands_aci/code_search/: README.md  __init__.py  core.py  tools.py
openhands_aci/editor/: __init__.py  editor.py  enhanced_editor.py
openhands_aci/linter/: __init__.py  enhanced_linter.py  linter.py
openhands_aci/rag/: __init__.py  code_search.py  function_calling.py
openhands_aci/tools/: __init__.py  code_search_tool.py
scripts/: demo_code_search copy.py  demo_code_search.py  test_agent_code_search.py
tests/: test_code_search.py
tests/integration/: test_oh_editor.py
tests/integration/editor/: test_memory_usage.py  test_non_utf8_operations.py
tests/unit/: test_code_search_tool.py  test_workspace_root.py
tests/unit/editor/: test_encoding.py
